<!--
  ~ Copyright 2019 wanghonglin
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     http://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<resources>
    <string name="app_name">client-android</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="register">Sign up</string>
    <string name="go_to_login">Already have account? Click to login</string>
    <string name="go_to_register">No account? click here to sign up</string>
    <string name="login">Login</string>
    <string name="confirm_password">Confirm password</string>
    <string name="logout">Logout</string>
    <string name="empty_username_password">Username or password can not be empty</string>
    <string name="password_did_not_match">Password did not match</string>
    <string name="ok">OK</string>
    <string name="login_from_other_device">Your account has been login from other device</string>
    <string name="user_id">User ID</string>
    <string name="android_id">Android ID</string>
    <string name="token">Token</string>
</resources>
